[gd_scene load_steps=6 format=2]

[ext_resource path="res://LevelEditor.gd" type="Script" id=1]
[ext_resource path="res://UI/theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/tiles/grass.png" type="Texture" id=3]
[ext_resource path="res://Assets/tiles/road_v.png" type="Texture" id=4]
[ext_resource path="res://Assets/tiles/fountain.png" type="Texture" id=5]

[node name="LevelEditor" type="Node2D"]
script = ExtResource( 1 )

[node name="Tiles" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="EditorMenu" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0.631373 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -27.0
theme = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/EditorMenu"]
margin_left = 5.0
margin_top = 5.0
margin_right = 507.0
margin_bottom = 32.0
custom_constants/separation = 23
alignment = 1

[node name="SaveBtn" type="Button" parent="UI/EditorMenu/HBoxContainer"]
margin_left = 82.0
margin_right = 122.75
margin_bottom = 27.0
theme = ExtResource( 2 )
text = "Save"

[node name="LoadBtn" type="Button" parent="UI/EditorMenu/HBoxContainer"]
margin_left = 145.0
margin_right = 185.75
margin_bottom = 27.0
theme = ExtResource( 2 )
text = "Load"

[node name="TileSelect" type="HBoxContainer" parent="UI/EditorMenu/HBoxContainer"]
unique_name_in_owner = true
margin_left = 208.0
margin_right = 294.0
margin_bottom = 27.0
theme = ExtResource( 2 )

[node name="FountainBtn" type="Button" parent="UI/EditorMenu/HBoxContainer/TileSelect"]
margin_right = 26.0
margin_bottom = 27.0
icon = ExtResource( 5 )

[node name="GrassTile" type="Button" parent="UI/EditorMenu/HBoxContainer/TileSelect"]
margin_left = 30.0
margin_right = 56.0
margin_bottom = 27.0
icon = ExtResource( 3 )

[node name="RoadTile" type="Button" parent="UI/EditorMenu/HBoxContainer/TileSelect"]
margin_left = 60.0
margin_right = 86.0
margin_bottom = 27.0
icon = ExtResource( 4 )

[node name="PlaceBtn" type="Button" parent="UI/EditorMenu/HBoxContainer"]
visible = false
margin_left = 218.0
margin_right = 266.438
margin_bottom = 27.0
theme = ExtResource( 2 )
text = "Place"

[node name="PlayBtn" type="Button" parent="UI/EditorMenu/HBoxContainer"]
margin_left = 317.0
margin_right = 357.75
margin_bottom = 27.0
theme = ExtResource( 2 )
text = "Play"

[node name="WipeBtn" type="Button" parent="UI/EditorMenu/HBoxContainer"]
margin_left = 380.0
margin_right = 420.75
margin_bottom = 27.0
theme = ExtResource( 2 )
text = "Wipe"

[node name="Menu" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -72.0
margin_right = 144.0
margin_bottom = 72.0
rect_min_size = Vector2( 288, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="UI/Menu"]
margin_left = 5.0
margin_top = 5.0
margin_right = 283.0
margin_bottom = 139.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Menu/CenterContainer"]
margin_left = 99.0
margin_top = 2.0
margin_right = 178.0
margin_bottom = 131.0
custom_constants/separation = 24

[node name="MainMenuBtn" type="Button" parent="UI/Menu/CenterContainer/VBoxContainer"]
margin_right = 79.1875
margin_bottom = 27.0
text = "Main Menu"

[node name="AudioBtn" type="Button" parent="UI/Menu/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 51.0
margin_right = 79.0
margin_bottom = 78.0
toggle_mode = true
pressed = true
text = "Audio ON"

[node name="ContinueBtn" type="Button" parent="UI/Menu/CenterContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 79.0
margin_bottom = 129.0
text = "Continue"

[connection signal="pressed" from="UI/EditorMenu/HBoxContainer/SaveBtn" to="." method="_on_SaveBtn_pressed"]
[connection signal="pressed" from="UI/EditorMenu/HBoxContainer/LoadBtn" to="." method="_on_LoadBtn_pressed"]
[connection signal="pressed" from="UI/EditorMenu/HBoxContainer/TileSelect/FountainBtn" to="." method="_on_FountainBtn_pressed"]
[connection signal="pressed" from="UI/EditorMenu/HBoxContainer/TileSelect/GrassTile" to="." method="_on_GrassTile_pressed"]
[connection signal="pressed" from="UI/EditorMenu/HBoxContainer/TileSelect/RoadTile" to="." method="_on_RoadTile_pressed"]
[connection signal="pressed" from="UI/EditorMenu/HBoxContainer/PlaceBtn" to="." method="_on_PlaceBtn_pressed"]
[connection signal="pressed" from="UI/EditorMenu/HBoxContainer/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="UI/EditorMenu/HBoxContainer/WipeBtn" to="." method="_on_WipeBtn_pressed"]
[connection signal="pressed" from="UI/Menu/CenterContainer/VBoxContainer/MainMenuBtn" to="." method="_on_MainMenuBtn_pressed"]
[connection signal="toggled" from="UI/Menu/CenterContainer/VBoxContainer/AudioBtn" to="." method="_on_AudioBtn_toggled"]
[connection signal="pressed" from="UI/Menu/CenterContainer/VBoxContainer/ContinueBtn" to="." method="_on_ContinueBtn_pressed"]
